# simple-rust-process-manager

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
assets/: app.rc
scripts/: run-render-test.ps1
src/: config.rs  log_classification.rs  main.rs  process_manager.rs  rest_api.rs  ui.rs
