[package]
name = "simple-rust-process-manager"
version = "0.1.0"
edition = "2021"
description = "A simple process manager for development environments"
authors = ["Developer"]

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
portable-pty = "0.8"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
winresource = "0.1"
