[package]
name = "simple-rust-process-manager"
version = "0.1.0"
edition = "2021"
description = "A simple process manager for development environments"
authors = ["Developer"]

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
portable-pty = "0.8"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_Security"] }

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
winresource = "0.1"
