[package]
name = "simple-rust-process-manager"
version = "0.1.0"
edition = "2021"
description = "A simple process manager for development environments"
authors = ["Developer"]

[dependencies]
arboard = "3.6"
axum = { version = "0.8", features = ["json"] }
eframe = { version = "0.33", default-features = false, features = ["wgpu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
portable-pty = "0.8"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
raw-window-handle = "0.6"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
wgpu = { version = "27", features = ["dx12", "vulkan"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_Security", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[profile.release]
opt-level = 3
lto = "thin"

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winresource = "0.1"
